--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "build-prod": "NODE_ENV=\"production\" bun run build",
     "build": "bun run build.ts",
-    "watch": "bun run watch.ts",
-    "serve": "bun run out/back/server.js",
+    "watch": "bun --env-file=out/.env run watch.ts",
+    "serve": "bun --env-file=out/.env run out/back/server.js",
     "serve-pm2": "bunx --bun pm2 start"
   },
   "browserslist": {
