add hot reload on `bun run watch`

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build-prod": "NODE_ENV=\"production\" bun run build",
     "build": "bun run build.ts",
     "watch": "bun --env-file=out/.env run watch.ts",
-    "serve": "bun --env-file=out/.env run out/back/server.js",
+    "serve": "bun --env-file=out/.env run src/back/server.ts",
+    "serve-prod": "bun --env-file=out/.env run out/back/server.js",
     "serve-pm2": "bunx --bun pm2 start"
   },
   "browserslist": {
