--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,44 @@
 {
   "compilerOptions": {
+    "paths": {
+      "back/*": [
+        "./src/back/*"
+      ],
+      "front/*": [
+        "./temp/*",
+        "./src/front/*"
+      ],
+      "src/*": [
+        "./src/*"
+      ]
+    },
     // Enable latest features
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
-
     // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
-
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "esModuleInterop": true,
-    "typeRoots" : ["./node_modules/@types", "./typings"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./typings"
+    ]
   }
 }
