add initial testing for backend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
       ],
       "src/*": [
         "./src/*"
+      ],
+      "test/*": [
+        "./test/*"
       ]
     },
     // Enable latest features
