--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "type": "module",
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
+    "@happy-dom/global-registrator": "^15.11.6",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bun": "^1.1.11",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/sass": "^1.45.0",
     "sass": "^1.79.4"
   },
