--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "bun": "^1.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "scripts": {
     "build-prod": "NODE_ENV=\"production\" bun run build",
     "build": "bun run build.ts",
-    "watch": "bun --env-file=out/.env run watch.ts",
-    "serve": "bun --env-file=out/.env run src/back/server.ts",
-    "serve-prod": "bun --env-file=out/.env run out/server.js",
+    "watch": "bun run watch.ts",
+    "serve": "bun run src/back/server.ts",
+    "serve-prod": "bun run out/server.js",
     "serve-pm2": "bunx --bun pm2 start"
   },
   "browserslist": {
