--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "react-dom": "^18.3.1"
   },
   "scripts": {
-    "build-prod": "NODE_ENV=\"production\" bun run build",
+    "build-prod": "NODE_ENV=production bun run build",
     "build": "bun run build.ts",
     "watch": "bun run watch.ts",
     "serve": "bun run src/back/server.ts",
-    "serve-prod": "bun run out/server.js",
+    "serve-prod": "NODE_ENV=production bun run out/server.js",
     "serve-pm2": "bunx --bun pm2 start",
     "prettify": "bunx prettier `git diff HEAD --name-only --diff-filter d`  --write"
   },
