--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bun": "^1.2.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "voldemortas-server": "npm:@jsr/voldemortas__server"
+    "voldemortas-server": "^1.0.0"
   },
   "scripts": {
     "build-prod": "bun run src/index.ts --build --prod",
