--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bun": "^1.2.17",
+    "chromium": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "voldemortas-server": "npm:@jsr/voldemortas__server@^1.1.1"
